--- a/src/app/pages/what/what.component.html
+++ b/src/app/pages/what/what.component.html
@@ -8,14 +8,13 @@
       <header>
         <h2>Strategy</h2>
       </header>
-
+      <h3>Measure twice, draw once</h3>
       <p class="what-we-do--tagline">
-        Strategy is an essential part to our process, no matter what stage you're at. We'll help clarify your purpose,
-        understand your users and define your goals.
+        We kick things off the right way. With a facilitated Strategy session we get to know your company, your problems, your users and your goals so there’s method to our madness. It’s plain sailing from then on in.
       </p>
 
       <p>
-        Find out more about <a [routerLink]="['/service/strategy']">Strategy service</a>.
+        What exactly is <a [routerLink]="['/service/strategy']">brand strategy</a>?
       </p>
     </section>
 
@@ -24,13 +23,14 @@
         <h2>Branding</h2>
       </header>
 
+      <h3>Move people</h3>
+
       <p class="what-we-do--tagline">
-        Like you, we believe brand aesthetics are the most important thing.
-        You need something engaging, unique and most importantly you!
+        The power to appeal means through your brand you’ll get the customers you desire.
       </p>
 
       <p>
-        Find out about <a [routerLink]="['/service/branding']">branding service</a>.
+        Find out about our <a [routerLink]="['/service/branding']">branding</a> service.
       </p>
     </section>
 
@@ -39,28 +39,33 @@
         <h2>Design</h2>
       </header>
 
+      <h3>We love making shit look cool</h3>
+
       <p class="what-we-do--tagline">
-        We've done websites, we've done apps. We've got what it takes to design you something
-        that shines.
+        We believe great design is everything so we go to great lengths to make sure your design compliments your brand perfectly.
+        From websites to beer labels graphic design exists at the core and we apply it to whatever challenge you bring.
       </p>
 
       <p>
-        Find out more about <a [routerLink]="['/service/design']">design service</a>.
+        Tell me more about our <a [routerLink]="['/service/design']">design</a> service.
       </p>
     </section>
 
     <section class="section">
       <header>
-        <h2>Website build</h2>
+        <h2>Website</h2>
       </header>
 
-        <p class="what-we-do--tagline">
-          We pride ourselves in writing clean, maintainable code on a platform you can trust using the latest technologies.
-        </p>
+      <h3>Make sure your website screams how awesome you are when you’re not able to</h3>
 
-        <p>
-          Find out about our <a [routerLink]="['/service/web-development']">web development service</a>.
-        </p>
+      <p class="what-we-do--tagline">
+        We build beautiful and enjoyable online experiences that lets your brand shine through.
+        Whether it’s a marketing site or an ecommerce system, let the tech evaporate from your concern.
+      </p>
+
+      <p>
+        What's this <a [routerLink]="['/service/web-development']">web development</a> service all about?
+      </p>
     </section>
 
     <app-get-in-touch></app-get-in-touch>
