--- a/src/app/pages/who/who.component.html
+++ b/src/app/pages/who/who.component.html
@@ -1,69 +1,87 @@
 <div class="white-bg who">
   <section class="container-fluid">
     <header>
-      <h2>Who we are</h2>
+      <h2>Who is Jupiter and who is the Giraffe?</h2>
     </header>
 
+    <p>Seek and ye shall find...</p>
+
     <p>
-      Jupiter and the Giraffe are a <a href="https://jupiterandthegiraffe.com" class="link-plain"><strong>brand strategy</strong></a> and
-      <a href="https://jupiterandthegiraffe.com" class="link-plain"><strong>design agency</strong></a>.
-      We specialise in helping companies understand their pain points better and establish a brand that reflects the true values of the organisation.
+      Jupiter and the Giraffe believe daring creativity shouldn’t be reserved for the big guys.
+      Empowering all types of business to be different and stand tall among the giants.
     </p>
 
     <p>
-      Having worked in <a href="https://jupiterandthegiraffe.com" class="link-plain">global enterprise companies</a>, we understand the tools and techniques that
-      got them to the top, but we don't want to work with global enterprise organisations. They're sluggish and wont experiment
-      the way the web demands us to be. We believe those learnings can be applied to <a href="https://jupiterandthegiraffe.com" class="link-plain">SME branding</a>
-      and help them look professional where competition is tough.
-    </p>
-
-    <hr>
-
-    <p>
-      Jupiter and the Giraffe have never let anyone down and don't ever intend to. Delivering projects with unprecedented enthusiasm,
-      we make sure your experience with us is a memorable one.
+      We travel the world in search of the most ambitious people and hire a collective of the best freelancers so that
+      we can offer exceptional talent,
+      a range of creative thinking, and solutions that are bespoke to your business.
+      We go beyond the Ort-Cloud of delivery and create solutions that take your goals to the next level.
     </p>
 
     <p>
-      Unashamedly bold and not afraid to be weird,
-      it's crucial that our portfolio demonstrations that we are as professional as we are kooky and we take our work very seriously.
-      We take pride in our resilient attention to detail,
-      our commitment to the brands and people we work with and focus on making sure everything we do is the best that it can be.
+      We solve business challenges through the medium of creativity and design be that a brand or your website.
     </p>
 
-    <p>
-      Jupiter and the Giraffe love all things digital and especially love a challenge.
-      Much of the work undertaken is simply a case of saying "Why not?". We never snuff our noses at an idea, no matter how bizarre.
-      Simply call us up or email telling us your project and we'll consider it.
-    </p>
+    <section class="who__images">
+      <header>
+        <h3>Our family</h3>
+      </header>
 
-    <div class="row who__images">
-      <div class="col who__image" itemscope itemtype="http://schema.org/Person">
-        <div class="media">
-          <div class="media-left">
-            <img itemprop="image" class="media-object" [src]="'assets/images/founder.jpg'" alt="Photo of Samuel Gregory" [srcset]="'assets/images/founder.jpg 1x, assets/images/founder@2x.jpg 2x'">
+      <div class="row">
+        <div class="col who__image" itemscope itemtype="http://schema.org/Person">
+          <div class="media">
+            <div class="media-left">
+              <img itemprop="image" class="media-object" [src]="'assets/images/founder.jpg'"
+                   alt="Photo of Samuel Gregory"
+                   [srcset]="'assets/images/founder.jpg 1x, assets/images/founder@2x.jpg 2x'">
+            </div>
+            <div class="media-body media-bottom">
+              <h4 class="media-heading" itemprop="name">Samuel Gregory</h4>
+              <span itemprop="jobTitle">CEO/Founder</span> <br>
+              <a href="mailto:samuel@jupiterandthegiraffe.com" itemprop="email">samuel@jupiterandthegiraffe.com</a>
+            </div>
           </div>
-          <div class="media-body media-bottom">
-            <h3 class="media-heading" itemprop="name">Samuel Gregory</h3>
-            <span itemprop="jobTitle">- CEO/Founder</span> <br>
-            <a href="mailto:samuel@jupiterandthegiraffe.com" itemprop="email">samuel@jupiterandthegiraffe.com</a>
+        </div>
+        <div class="col who__image" itemscope itemtype="http://schema.org/Person">
+          <div class="media">
+            <div class="media-right">
+              <img class="media-object" [src]="'assets/images/suzie.jpg'" alt="Photo of Suzannah James"
+                   [srcset]="'assets/images/suzie.jpg 1x, assets/images/suzie@2x.jpg 2x'">
+            </div>
+            <div class="media-body media-bottom">
+              <h4 class="media-heading" itemprop="name">Suzannah James</h4>
+              <span itemprop="jobTitle">Creative Director</span> <br>
+              <a href="mailto:suzannah@jupiterandthegiraffe.com" itemprop="email">suzannah@jupiterandthegiraffe.com</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col who__image" itemscope itemtype="http://schema.org/Person">
-        <div class="media">
-          <div class="media-right">
-            <img class="media-object" [src]="'assets/images/suzie.jpg'" alt="Photo of Suzannah James" [srcset]="'assets/images/suzie.jpg 1x, assets/images/suzie@2x.jpg 2x'">
-          </div>
-          <div class="media-body media-bottom">
-            <h3 class="media-heading" itemprop="name">Suzannah James</h3>
-            <span itemprop="jobTitle">- Creative Director</span> <br>
-            <a href="mailto:suzannah@jupiterandthegiraffe.com" itemprop="email">suzannah@jupiterandthegiraffe.com</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    </section>
+
+    <section>
+      <header>
+        <h3>Our process</h3>
+      </header>
+
+      <p>
+        Jupiter and the Giraffe are a <a href="https://jupiterandthegiraffe.com" class="link-plain"><strong>brand
+        strategy</strong></a> and
+        <a href="https://jupiterandthegiraffe.com" class="link-plain"><strong>design agency</strong></a>.
+        We specialise in helping companies understand their pain points better and establish a brand that reflects the
+        true values of the organisation.
+      </p>
+
+      <p>
+        Having worked in <a href="https://jupiterandthegiraffe.com" class="link-plain">global enterprise companies</a>,
+        we understand the tools and techniques that
+        got them to the top, but we don't want to work with global enterprise organisations. They're sluggish and wont
+        experiment
+        the way the web demands us to be. We believe those learnings can be applied to <a
+        href="https://jupiterandthegiraffe.com" class="link-plain">SME branding</a>
+        and help them look professional where competition is tough.
+      </p>
+    </section>
 
     <app-get-in-touch></app-get-in-touch>
-    </section>
+  </section>
 </div>
