--- a/src/app/pages/who/who.component.scss
+++ b/src/app/pages/who/who.component.scss
@@ -2,7 +2,7 @@
 @import "../../../assets/sass/tools/tools";
 
 .who {
-  &__image {
+  &__images {
     margin-top: $space-large;
     margin-bottom: $space-large;
 
