--- a/src/app/global/get-in-touch/get-in-touch.component.html
+++ b/src/app/global/get-in-touch/get-in-touch.component.html
@@ -1,39 +1,18 @@
-<div class="get-in-touch section">
+<div class="get-in-touch section text-center">
   <section>
     <header>
-      <h2>Get in touch!</h2>
+      <h2>{{title || "Ready to launch?"}}</h2>
     </header>
     <p>
       Interested in letting us help you design your brand? <a [routerLink]="['/contact']">Contact us</a> or check out
       <a [routerLink]="['/work']">our work</a>.
     </p>
-    <section>
-      <header>
-        <h3>Come say 'hello' on social</h3>
-      </header>
 
-      <ul class="list-unstyled list-inline">
-        <li>
-          <a href="https://instagram.com/jupiterandthegiraffe" class="link-plain get-in-touch__links" title="Jupiter and the Giraffe Instagram profile">
-            <i class="icon-instagram"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/jupiter_giraffe" class="link-plain get-in-touch__links" title="Jupiter and the Giraffe Twitter profile">
-            <i class="icon-twitter"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://facebook.com/jupiterandthegiraffe" class="link-plain get-in-touch__links" title="Jupiter and the Giraffe Facebook profile">
-            <i class="icon-facebook"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.behance.net/JupiterandtheGiraffe" class="link-plain get-in-touch__links" title="Jupiter and the Giraffe Behance profile">
-            <i class="icon-behance"></i>
-          </a>
-        </li>
-      </ul>
-    </section>
+    <div class="text-center padding-top--lg padding-bottom--lg">
+      <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--dark"><span aria-hidden="true">🚀 </span>Let's
+        go!</a>
+    </div>
+
+    <app-social></app-social>
   </section>
 </div>
