--- a/src/app/global/get-in-touch/get-in-touch.component.scss
+++ b/src/app/global/get-in-touch/get-in-touch.component.scss
@@ -1,15 +1,9 @@
 @import "../../../assets/sass/settings/settings";
-@import "../../../assets/sass/tools/tools";
 
 .get-in-touch {
   margin-top: 100px;
-  &__links {
-    margin-right: $space-large;
-    color: $color-black;
-    @include font-size($heading-2);
 
-    @include hover-focus {
-      color: $color-oldBrick;
-    }
+  .btn {
+    color: $color-mine-shaft;
   }
 }
