--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -93,5 +93,13 @@
 
   &__lead {
     @include font-size($font-lead);
+
+    @include md {
+      @include font-size($font-lead-desk);
+    }
   }
+}
+
+agm-map {
+  height: 400px;
 }
