disable map in dev mode

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -36,7 +36,7 @@
 
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
     <h1>Discover how brands <div></div>can move people</h1>
-    <p>Let’s create an awesome experience</p>
+    <p class="margin-bottom--lg">Let’s create an awesome experience</p>
     <div class="hero__button" data-aos="fade-in" data-aos-delay="1700" data-aos-duration="3000">
       <a [routerLink]="['/work']" class="btn btn--lg">See the work</a>
     </div>
