--- a/src/app/pages/home/friends/friends.component.html
+++ b/src/app/pages/home/friends/friends.component.html
@@ -28,6 +28,6 @@
   </ul>
 
   <a href="" [routerLink]="['/work']" class="btn btn--lg btn--outline btn--dark">
-    <span aria-hidden="true">💻 </span>See the work
+    <span aria-hidden="true" class="vertical-align">💻 </span>See the work
   </a>
 </section>
