--- a/src/app/pages/what/what.component.html
+++ b/src/app/pages/what/what.component.html
@@ -1,4 +1,4 @@
-<div class="what-we-do white-bg">
+<div class="what-we-do white-bg text-center">
   <section class="container-fluid">
     <header>
       <h1 class="sr-only">What we do</h1>
@@ -8,13 +8,17 @@
       <header>
         <h2>Strategy</h2>
       </header>
+
       <h3>Measure twice, draw once</h3>
+
       <p class="what-we-do--tagline">
-        We kick things off the right way. With a facilitated Strategy session we get to know your company, your problems, your users and your goals so there’s method to our madness. It’s plain sailing from then on in.
+        We kick things off the right way with a facilitated <a [routerLink]="['/service/strategy']">Strategy</a> session.
+        We get to know your company, your problems, your users and your goals so there’s method to our madness.
+        It’s plain sailing from then on in.
       </p>
 
-      <p>
-        What exactly is <a [routerLink]="['/service/strategy']">brand strategy</a>?
+      <p class="what-we-do__prompt" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">
+        Tell me more about <a [routerLink]="['/service/strategy']">brand strategy</a>?
       </p>
     </section>
 
@@ -26,10 +30,10 @@
       <h3>Move people</h3>
 
       <p class="what-we-do--tagline">
-        The power to appeal means through your brand you’ll get the customers you desire.
+        The power to appeal means through your <a [routerLink]="['/service/branding']">branding</a> you’ll get the customers you desire.
       </p>
 
-      <p>
+      <p class="what-we-do__prompt" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">
         Find out about our <a [routerLink]="['/service/branding']">branding</a> service.
       </p>
     </section>
@@ -42,28 +46,28 @@
       <h3>We love making shit look cool</h3>
 
       <p class="what-we-do--tagline">
-        We believe great design is everything so we go to great lengths to make sure your design compliments your brand perfectly.
+        We believe great <a [routerLink]="['/service/design']">design</a> is everything so we go to great lengths to make sure your design compliments your brand perfectly.
         From websites to beer labels graphic design exists at the core and we apply it to whatever challenge you bring.
       </p>
 
-      <p>
-        Tell me more about our <a [routerLink]="['/service/design']">design</a> service.
+      <p class="what-we-do__prompt" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">
+        Tell me more about your <a [routerLink]="['/service/design']">design</a> service.
       </p>
     </section>
 
     <section class="section">
       <header>
-        <h2>Website</h2>
+        <h2>Websites</h2>
       </header>
 
-      <h3>Make sure your website screams how awesome you are when you’re not able to</h3>
+      <h3>Make sure it screams how awesome you are when you’re not able to</h3>
 
       <p class="what-we-do--tagline">
-        We build beautiful and enjoyable online experiences that lets your brand shine through.
+        We build beautiful and enjoyable <a [routerLink]="['/service/web-development']">online</a> experiences that lets your brand shine through.
         Whether it’s a marketing site or an ecommerce system, let the tech evaporate from your concern.
       </p>
 
-      <p>
+      <p class="what-we-do__prompt" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">
         What's this <a [routerLink]="['/service/web-development']">web development</a> service all about?
       </p>
     </section>
