--- a/src/app/pages/who/who.component.scss
+++ b/src/app/pages/who/who.component.scss
@@ -11,4 +11,12 @@
       margin-bottom: $space-xlrg;
     }
   }
+
+  &__link {
+    color: $color-black;
+
+    @include hover-focus {
+      color: $color-oldBrick;
+    }
+  }
 }
