--- a/src/app/pages/what/what.component.scss
+++ b/src/app/pages/what/what.component.scss
@@ -20,4 +20,12 @@
       margin: $space-xlrg 0;
     }
   }
+
+  &__prompt {
+    margin: 0;
+    padding: $space-medium;
+    border-radius: 5px;
+    border: 1px solid $color-mine-shaft;
+    text-align: center;
+  }
 }
