remove google maps api

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -56,6 +56,8 @@
       </a>
     </div>
 
+    <div class="section"></div>
+
     <section class="home__blog section margin-top--lrg">
       <header>
         <h2>Discover</h2>
