--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -36,6 +36,12 @@
 
   &__logo {
     font-family: $title-font;
+
+    a {
+      @include hover-focus {
+        color: $color-white;
+      }
+    }
   }
 
   &__menu {
