--- a/src/assets/sass/generic/_section.scss
+++ b/src/assets/sass/generic/_section.scss
@@ -5,4 +5,16 @@
     margin-top: 90px;
     margin-bottom: 90px;
   }
+
+  &--break {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    box-shadow: inset 0px 0px 11px 0px rgba(0,0,0,0.75);
+
+    padding-top: 20px;
+    padding-bottom: 50px;
+    @include md {
+      padding-bottom: 90px;
+    }
+  }
 }
