--- a/src/assets/sass/objects/_btn.scss
+++ b/src/assets/sass/objects/_btn.scss
@@ -20,24 +20,25 @@
   &--primary-outline {
     background-color: transparent;
     backdrop-filter: blur(3px);
-    border: 1px solid $white;
-    color: $white;
+    border: 1px solid $color-white;
+    color: $color-white;
 
     &:hover,
     &:focus {
-      background-color: $white;
-      color: $black;
+      background-color: $color-white;
+      color: $color-black;
     }
   }
 
-  &--white {
-    border-color: $white;
-    color: $white;
+  &--white,
+  &--light {
+    border-color: $color-white;
+    color: $color-white;
 
     &:hover,
     &:focus {
-      background-color: $white;
-      color: $black;
+      background-color: $color-white;
+      color: $color-black;
       outline: none;
     }
   }
