--- a/src/app/pages/home/friends/friends.component.html
+++ b/src/app/pages/home/friends/friends.component.html
@@ -1,33 +1,35 @@
-<section class="section friends text-center">
-  <header class="sr-only">
-    <h2>Work</h2>
-  </header>
+<section class="section section--break friends text-center">
+  <div class="container-fluid">
+    <header>
+      <h2>Clients</h2>
+    </header>
 
-  <ul class="row list-unstyled friends__list">
-    <li class="col-sm-4 col-4 friends__list-item" *ngFor="let friend of friends; let i = index"
-        data-aos="fade-up"
-        [attr.data-aos-delay]="i * 150"
-    >
-      <a [routerLink]="friend.page" class="friends__link" *ngIf="friend.page; else noLink;">
-        <img
-          class="img-fluid friends__image"
-          src="assets/images/{{ friend.img }}.png"
-          srcset="assets/images/{{friend.img}}.png 1x, assets/images/{{friend.img}}@2x.png 2x"
-          [attr.alt]="friend.name">
-      </a>
-      <ng-template #noLink>
-        <span class="friends__link">
+    <ul class="row list-unstyled friends__list">
+      <li class="col-sm-4 col-4 friends__list-item" *ngFor="let friend of friends; let i = index"
+          data-aos="fade-up"
+          [attr.data-aos-delay]="i * 150"
+      >
+        <a [routerLink]="friend.page" class="friends__link" *ngIf="friend.page; else noLink;">
           <img
             class="img-fluid friends__image"
             src="assets/images/{{ friend.img }}.png"
             srcset="assets/images/{{friend.img}}.png 1x, assets/images/{{friend.img}}@2x.png 2x"
             [attr.alt]="friend.name">
-        </span>
-      </ng-template>
-    </li>
-  </ul>
+        </a>
+        <ng-template #noLink>
+          <span class="friends__link">
+            <img
+              class="img-fluid friends__image"
+              src="assets/images/{{ friend.img }}.png"
+              srcset="assets/images/{{friend.img}}.png 1x, assets/images/{{friend.img}}@2x.png 2x"
+              [attr.alt]="friend.name">
+          </span>
+        </ng-template>
+      </li>
+    </ul>
 
-  <a href="" [routerLink]="['/work']" class="btn btn--lg btn--outline btn--dark">
-    <span aria-hidden="true" class="vertical-align">💻 </span>See the work
-  </a>
+    <a href="" [routerLink]="['/work']" class="btn btn--lg btn--outline btn--light">
+      <span aria-hidden="true" class="vertical-align">💻 </span>See the work
+    </a>
+  </div>
 </section>
