--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,9 +23,13 @@
         </a>
       </div>
     </section>
+  </div>
+</section>
 
-    <app-friends-component></app-friends-component>
+<app-friends-component></app-friends-component>
 
+<section class="home">
+  <div class="container-fluid">
     <section class="text-center">
       <header>
         <h2>
