--- a/src/app/pages/work/work.component.scss
+++ b/src/app/pages/work/work.component.scss
@@ -69,17 +69,17 @@
 
     a {
       padding: 5px;
-      background-color: $color-oldBrick;
+      //background-color: $color-oldBrick;
       color: $color-white;
       border-radius: 5px;
       font-size: $small-font;
-      border: 1px solid $color-pickledBluewood;
+      border: 1px solid $color-white;
       transition: background-color .3s ease;
       @include font-size($small-font);
 
       @include hover-focus {
         background-color: $color-white;
-        color: $color-oldBrick;
+        color: $color-black;
       }
     }
   }
